<resources>
    <string name="app_name">LoginRegistration</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign up</b></string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="not_selected">Not Selected</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City or Town</string>
    <string name="sign_up">Signup</string>
    <string name="your_name">Aapka Naam</string>
    <string-array name="countries">
        <item>Select</item>
        <item>India</item>
    </string-array>
    <string-array name="states_India">
        <item>Select</item>
        <item>Assam</item>
        <item>Arunachal Pradesh</item>
        <item>Andhra Pradesh</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Chandigarh</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Jammu and Kashmir</item>
        <item>Kerala</item>
        <item>Karnataka</item>
        <item>Lakshadweep</item>
        <item>Mizoram</item>
        <item>Meghalaya</item>
        <item>Manipur</item>
        <item>Maharashtra</item>
        <item>Madhya Pradesh</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tripura</item>
        <item>Telangana</item>
        <item>Tamil Nadu</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="cities_Chandigarh">
        <item>Select</item>
        <item>Chandigarh</item>
    </string-array>
    <string-array name="cities_Delhi">
        <item>Select</item>
        <item>Delhi</item>
        <item>New Delhi</item>
    </string-array>
    <string-array name="cities_Jharkhand">
        <item>Select</item>
        <item>Adityapur</item>
        <item>Amlabad</item>
        <item>Angarpathar</item>
        <item>Ara</item>
        <item>Babua Kalan</item>
        <item>Bagbahra</item>
        <item>Baliari</item>
        <item>Baliapur</item>
        <item>Balkundra</item>
        <item>Bandhgora</item>
        <item>Barajamda</item>
        <item>Barhi</item>
        <item>Barka Kana</item>
        <item>Barki Saraiya</item>
        <item>Barughutu</item>
        <item>Barwadih</item>
        <item>Basaria</item>
        <item>Basukinath</item>
        <item>Bermo</item>
        <item>Bhagatdih</item>
        <item>Bhaurah</item>
        <item>Bhojudih</item>
        <item>Bhuli</item>
        <item>Bokaro</item>
        <item>Borio Bazar</item>
        <item>Bundu</item>
        <item>Chaibasa</item>
        <item>Chaitudih</item>
        <item>Chakradharpur</item>
        <item>Chakulia</item>
        <item>Chandaur</item>
        <item>Chandil</item>
        <item>Chandrapura</item>
        <item>Chas</item>
        <item>Chatra</item>
        <item>Chhatatanr</item>
        <item>Chhotaputki</item>
        <item>Chiria</item>
        <item>Chirkunda</item>
        <item>Churi</item>
        <item>Daltenganj</item>
        <item>Danguwapasi</item>
        <item>Dari</item>
        <item>Deoghar</item>
        <item>Deorikalan</item>
        <item>Devghar</item>
        <item>Dhanbad</item>
        <item>Dhanwar</item>
        <item>Dhaunsar</item>
        <item>Dugda</item>
        <item>Dumarkunda</item>
        <item>Dumka</item>
        <item>Egarkunr</item>
        <item>Gadhra</item>
        <item>Garwa</item>
        <item>Ghatsila</item>
        <item>Ghorabandha</item>
        <item>Gidi</item>
        <item>Giridih</item>
        <item>Gobindpur</item>
        <item>Godda</item>
        <item>Godhar</item>
        <item>Golphalbari</item>
        <item>Gomoh</item>
        <item>Gua</item>
        <item>Gumia</item>
        <item>Gumla</item>
        <item>Haludbani</item>
        <item>Hazaribag</item>
        <item>Hesla</item>
        <item>Husainabad</item>
        <item>Isri</item>
        <item>Jadugora</item>
        <item>Jagannathpur</item>
        <item>Jamadoba</item>
        <item>Jamshedpur</item>
        <item>Jamtara</item>
        <item>Jarangdih</item>
        <item>Jaridih</item>
        <item>Jena</item>
        <item>Jasidih</item>
        <item>Jharia</item>
        <item>Jharia Khas</item>
        <item>Jhinkpani</item>
        <item>Jhumri Tilaiya</item>
        <item>Jorapokhar</item>
        <item>Jugsalai</item>
        <item>Kailudih</item>
        <item>Kalikapur</item>
        <item>Kandra</item>
        <item>Kanke</item>
        <item>Katras</item>
        <item>Kedla</item>
        <item>Kenduadih</item>
        <item>Kharkhari</item>
        <item>Kharsawan</item>
        <item>Khelari</item>
        <item>Khunti</item>
        <item>Kiri Buru</item>
        <item>Kiriburu</item>
        <item>Kodarma</item>
        <item>Kuju</item>
        <item>Kurpania</item>
        <item>Kustai</item>
        <item>Lakarka</item>
        <item>Lapanga</item>
        <item>Latehar</item>
        <item>Lohardaga</item>
        <item>Loiya</item>
        <item>Loyabad</item>
        <item>Madhupur</item>
        <item>Mahesh Mundi</item>
        <item>Maithon</item>
        <item>Malkera</item>
        <item>Mango</item>
        <item>Manoharpur</item>
        <item>Marma</item>
        <item>Meghahatuburu Forest village</item>
        <item>Mera</item>
        <item>Meru</item>
        <item>Mihijam</item>
        <item>Mugma</item>
        <item>Muri</item>
        <item>Mushabani</item>
        <item>Nagri Kalan</item>
        <item>Netarhat</item>
        <item>Nirsa</item>
        <item>Noamundi</item>
        <item>Okni</item>
        <item>Orla</item>
        <item>Pakaur</item>
        <item>Palamau</item>
        <item>Palawa</item>
        <item>Panchet</item>
        <item>Panrra</item>
        <item>Paratdih</item>
        <item>Pathardih</item>
        <item>Patratu</item>
        <item>Phusro</item>
        <item>Pondar Kanali</item>
        <item>Rajmahal</item>
        <item>Ramgarh</item>
        <item>Ranchi</item>
        <item>Ray</item>
        <item>Rehla</item>
        <item>Religara</item>
        <item>Rohraband</item>
        <item>Sahibganj</item>
        <item>Sahnidih</item>
        <item>Saraidhela</item>
        <item>Saraikela</item>
        <item>Sarjamda</item>
        <item>Saunda</item>
        <item>Sewai</item>
        <item>Sijhua</item>
        <item>Sijua</item>
        <item>Simdega</item>
        <item>Sindari</item>
        <item>Sinduria</item>
        <item>Sini</item>
        <item>Sirka</item>
        <item>Siuliban</item>
        <item>Surubera</item>
        <item>Tati</item>
        <item>Tenudam</item>
        <item>Tisra</item>
        <item>Topa</item>
        <item>Topchanchi</item>
    </string-array>
</resources>